--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Our Countdown</title>
+    <title>Countdown</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -9,7 +9,7 @@
  <div class="overlay"></div>
  <div class="wrapper">
    <div class="">
-     <h1 class="title"><span>Our reunion</span>COUNTDOWN</h1>
+     <h1 class="title"><span>42 core cursus completion</span>COUNTDOWN</h1>
      <div class="countdown-container">
        <div>
          <p id="days" class="big-text">0</p>
